# LightCollection

./: 385nmSource_iso.mac  80nmSource_iso.mac  80nmSource_straight.mac  CMakeLists.txt  grabdataTool.C  init.mac  input_TestStand.mac  input_fiber.mac  input_plate.mac  lightCollection.cc  nedm_compound.mac  singleFiber_input.mac  singleLG.mac  singlePlate_input.mac  testRun.mac  threeLG.mac  threePlate_input.mac  vis.mac
include/: LightCollectionActionInitialization.hh  LightCollectionDetectorConstruction.hh  LightCollectionDetectorMessenger.hh  LightCollectionEventAction.hh  LightCollectionEventInformation.hh  LightCollectionRunAction.hh  LightCollectionRunActionMessenger.hh  LightCollectionStackingAction.hh  LightCollectionSteppingAction.hh  LightCollectionTrackInformation.hh  LightCollectionTrackingAction.hh  NedmCellSide.hh  NedmCompoundSolid.hh  NedmDetectorComponent.hh  NedmDetectorConstruction.hh  NedmDetectorMessenger.hh  NedmDetectorParameters.hh  NedmLightGuide.hh  NedmPMT.hh  NedmPhysicsList.hh  NedmPhysicsListMessenger.hh  NedmQuartzWindow.hh  nEDMCellSideConstructor.hh  nEDMComponentConstructor.hh  nEDMConstructor.hh  nEDMDetectorMessenger.hh  nEDMLHeConstructor.hh  nEDMMaterials.hh  nEDMModularPhysicsList.hh  nEDMPhysicsList.hh  nEDMSensitiveDetector.hh  nEDMSimpleDetectorConstruction.hh  nEDMSimplePhotDetConstructor.hh  nEDMSimplePhysVolManager.hh  nEDMWLSFiberConstructor.hh  nEDMWorldConstructor.hh
res/: bent_1125.txt  bent_1125.txt.bak  bent_175.txt  bent_175.txt.bak  center_lg.txt  inner_lg.txt  left_lg.txt  outer_lg.txt  right_lg.txt  straight.txt  test_bent.txt
src/: LightCollectionActionInitialization.cc  LightCollectionDetectorConstruction.cc  LightCollectionDetectorMessenger.cc  LightCollectionEventAction.cc  LightCollectionEventInformation.cc  LightCollectionRunAction.cc  LightCollectionRunActionMessenger.cc  LightCollectionStackingAction.cc  LightCollectionSteppingAction.cc  LightCollectionTrackInformation.cc  LightCollectionTrackingAction.cc  NedmCellSide.cc  NedmCompoundSolid.cc  NedmDetectorComponent.cc  NedmDetectorConstruction.cc  NedmDetectorMessenger.cc  NedmDetectorParameters.cc  NedmLightGuide.cc  NedmOpTPB.cc  NedmPMT.cc  NedmPhysicsListMessenger.cc  NedmQuartzWindow.cc  NedmWLSFiber.cc  nEDMCellSideConstructor.cc  nEDMComponentConstructor.cc  nEDMConstructor.cc  nEDMDetectorConstruction.cc  nEDMDetectorMessenger.cc  (+10 more)
